# github-trending-digest

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
cli/: main.py
docs/: API.md  ARCHITECTURE.md  CONFIG.md  USAGE.md
src/trending_digest/: __init__.py  analyzer.py  fetcher.py  models.py  notifier.py  scheduler.py  storage.py
